tests/baselines/reference/parserClassDeclaration15.errors.txt
==== tests/cases/compiler/parserClassDeclaration15.ts (1 errors) ====
    class C {
       foo();
       constructor() { }
       ~~~~~~~~~~~
!!! parserClassDeclaration15.ts(3,4): error TS2238: Function implementation expected.
    }